--- a/Projects.json
+++ b/Projects.json
@@ -153,7 +153,8 @@
     "ProjectName": "NetLimDisable",
     "Description": "Disables the WLAN AutoConfig bad state tracking for Windows 10 or later",
     "ProjectSlug": "NetLimDisable",
-    "ProjectImageLink": "NetLimDisable/OfficialAppIcon-WinPowerTools-512.png"
+    "ProjectImageLink": "NetLimDisable/OfficialAppIcon-WinPowerTools-512.png",
+    "ProjectOrg": "WPT"
   },
   {
     "ProjectName": "NativeLand",
