--- a/Projects.json
+++ b/Projects.json
@@ -128,14 +128,14 @@
     "ProjectImageLink": "NativeLand/OfficialAppIcon-NativeLand-512.png"
   },
   {
-    "ProjectName": "FileMagic",
-    "Description": "C# library for getting deep file descriptions from their magic number using the libmagic library from the 80's",
-    "ProjectSlug": "FileMagic",
-    "ProjectGBSlug": "filemagic-manual", 
+    "ProjectName": "Magico",
+    "Description": "A C# library that allows you to do various magic tricks, such as IEnumerable and file magic numbers",
+    "ProjectSlug": "Magico",
+    "ProjectGBSlug": "magico-manual", 
     "NuGetPackages": [
-        "FileMagicManaged",
-        "FileMagic.Native"
+        "Magico",
+        "Magico.Native"
     ],
-    "ProjectImageLink": "FileMagic/OfficialAppIcon-FileMagic-512.png"
+    "ProjectImageLink": "Magico/OfficialAppIcon-Magico-512.png"
   }
 ]
