--- a/Projects.json
+++ b/Projects.json
@@ -136,5 +136,15 @@
         "Metalinker"
     ],
     "ProjectImageLink": "Metalinker/OfficialAppIcon-Metalinker-512.png"
+  },
+  {
+    "ProjectName": "CliTester",
+    "Description": "C# library that allows you to make your console tests more intuitive than before",
+    "ProjectSlug": "CliTester",
+    "ProjectGBSlug": "clitester-manual", 
+    "NuGetPackages": [
+        "CliTester"
+    ],
+    "ProjectImageLink": "CliTester/OfficialAppIcon-CliTester-512.png"
   }
 ]
