--- a/Projects.json
+++ b/Projects.json
@@ -103,6 +103,7 @@
     "ProjectName": "NetLimDisable",
     "Description": "Disables the WLAN AutoConfig bad state tracking for Windows 10 or later",
     "ProjectSlug": "NetLimDisable",
+    "ProjectGBSlug": "aptivi/useful-tools/fix-windows-random-disconnections", 
     "ProjectImageLink": "NetLimDisable/OfficialAppIcon-WinPowerTools-512.png",
     "ProjectOrg": "WPT"
   },
