imp - Updated Nitrocid KS GH repo path
---

This is in preparation for the same change.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 2/2

--- a/Projects.json
+++ b/Projects.json
@@ -2,7 +2,7 @@
   {
     "ProjectName": "Nitrocid KS",
     "Description": "Nitrocid KS simulates our future-planned kernel, Nitrocid Kernel! It is made entirely in .NET with multiplatform support.",
-    "ProjectSlug": "NitrocidKS",
+    "ProjectSlug": "Nitrocid",
     "ProjectGBSlug": "nitrocid-ks-manual",
     "NuGetPackages": [
       "KS"
